# taro_tg_bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 299e507f54c1_added_recommendations_table.py  a61a658ac5b4_added_sqlalchemy_jobstorage.py  eb0984d07893_added_forecasts_sections.py  ee49486087d3_database_creation.py  efa673b05af0_added_moon_data_table.py
src/data/: config.py
src/keyboards/: keyboards.py
src/middlewares/: uow_middleware.py
src/models/: job_model.py  moon_data_model.py  recommendation_model.py  user_model.py
src/repositories/: moon_data_repository.py  recommendation_repository.py  user_repository.py
src/routers/: advice_router.py  onboarding_router.py  util_router.py
src/schemas/: moon_data_schemas.py  recommendation_schemas.py  user_schemas.py
src/services/: bot_service.py  geo_service.py  gsheets_service.py  moon_service.py  openai_service.py  recomendation_service.py  sheduler_service.py  taro_service.py  user_service.py
src/states/: onboarding_state.py
src/utils/: commands.py  custom_logger.py  get_state.py  loader.py  on_bots_shutdown.py  router.py
src/utils/database/: database.py  repository.py  uow.py
