[tool.poetry]
name = "taro-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.6.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
redis = "^5.0.4"
apscheduler = "^3.10.4"
openai = "^1.30.5"
pygsheets = "^2.0.6"
psycopg2 = "^2.9.9"
ephem = "^4.1.5"
astral = "^3.2"
geopy = "^2.4.1"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
